k8s/base/rh-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rh-planner
  namespace: owner
  labels:
    app: rh-planner
spec:
  type: ClusterIP
  selector:
    app: rh-planner
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
